<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.mobile.droidsOnRoids.ui.sudoku.custom.SudokuView
            android:id="@+id/sudoku_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/sudoku_view_buttons_layout"
            android:layout_margin="@dimen/margin_small_4dp" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/sudoku_view_progress_bar"
            style="?android:attr/progressBarStyle"
            progressActivation="@{isLoading}"
            android:layout_width="@dimen/sudoku_view_progress_bar_width_100dp"
            android:layout_height="@dimen/sudoku_view_progress_bar_height_100dp"
            android:layout_alignTop="@+id/sudoku_view"
            android:layout_alignBottom="@+id/sudoku_view"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop" />

        <GridLayout
            android:id="@+id/sudoku_view_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:columnCount="3"
            android:rowCount="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_1"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/sudoku_btn_1"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_2"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="@dimen/margin_small_8dp"
                android:layout_marginEnd="@dimen/margin_small_8dp"
                android:text="@string/sudoku_btn_2"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_3"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/sudoku_btn_3"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_4"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/sudoku_btn_4"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_5"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="@dimen/margin_small_8dp"
                android:layout_marginEnd="@dimen/margin_small_8dp"
                android:text="@string/sudoku_btn_5"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_6"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/sudoku_btn_6"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_7"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/sudoku_btn_7"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_8"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginStart="@dimen/margin_small_8dp"
                android:layout_marginEnd="@dimen/margin_small_8dp"
                android:text="@string/sudoku_btn_8"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_9"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/sudoku_btn_9"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_check"
                style="@style/CheckSudokuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                app:icon="@drawable/ic_sudoku_view_check"
                android:paddingEnd="@dimen/padding_small_1dp"
                app:iconGravity="textStart"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_delete"
                style="@style/DeleteCellButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginStart="@dimen/margin_small_8dp"
                android:layout_marginEnd="@dimen/margin_small_8dp"
                app:icon="@drawable/ic_delete_cell_value"
                android:paddingEnd="@dimen/padding_small_1dp"
                app:iconGravity="textStart"
                app:isActive="@{isLoading}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sudoku_view_btn_new"
                style="@style/NewSudokuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                app:icon="@drawable/ic_sudoku_view_new"
                android:paddingEnd="@dimen/padding_small_1dp"
                app:iconGravity="textStart"
                app:isActive="@{isLoading}" />
        </GridLayout>
    </RelativeLayout>
</layout>
